--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://gamemateserver-ezf2bagbgbhrdcdt.westindia-01.azurewebsites.net/
+REACT_APP_API_URL="https://gamemateserver-ezf2bagbgbhrdcdt.westindia-01.azurewebsites.net"
