--- a/package.json
+++ b/package.json
@@ -33,10 +33,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "nodemon src/games/ballzone/server/index.ts npm start --prefix src/games/geographyclass",
-    "start": "concurrently \"npm run start:react\" \"npm run start:node\"",
+    "start":  "npm run start:react",
     "start:react": "react-scripts start",
-    "start:node": "node src/games/chess/app.js ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
