--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-konva": "^18.2.10",
-    "react-material-ui-carousel": "^3.4.2", 
+    "react-material-ui-carousel": "^3.4.2",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
@@ -33,9 +33,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start":  "npm run start:react",
+    "start": "npm run start:react",
     "start:react": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
